transition some features to be async